syntax = "proto3";
package authentication;

option go_package = "github.com/git-hyagi/janaina/pkg/authentication";

message LoginRequest {
 string username = 1;
 string password = 2;
}

message LoginResponse {
 string accessToken = 1;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
}
